load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/boskos/cmd/mason_client",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/istio.io/test-infra/boskos/gcp:go_default_library",
        "//vendor/k8s.io/test-infra/boskos/client:go_default_library",
        "//vendor/k8s.io/test-infra/boskos/common:go_default_library",
        "//vendor/k8s.io/test-infra/boskos/mason:go_default_library",
    ],
)

go_binary(
    name = "mason_client",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/boskos/cmd/mason_client",
    visibility = ["//visibility:public"],
)
