load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/boskos/cmd/mason_client",
    visibility = ["//visibility:private"],
    deps = [
        "//boskos/gcp:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/sigs.k8s.io/boskos/client:go_default_library",
        "//vendor/sigs.k8s.io/boskos/common:go_default_library",
        "//vendor/sigs.k8s.io/boskos/mason:go_default_library",
    ],
)

go_binary(
    name = "mason_client",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/boskos/cmd/mason_client",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
