load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generate.go"],
    importpath = "istio.io/test-infra/prow/config/cmd",
    visibility = ["//visibility:private"],
    deps = ["//prow/config:go_default_library"],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
