load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["buildFreshness.go"],
    importpath = "istio.io/test-infra/toolbox/metrics/buildFreshness",
    visibility = ["//visibility:private"],
    deps = [
        "//toolbox/util:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
    ],
)
